Changelog
=========

1.0a3 (unreleased)
------------------

- added Spanish translation and Uninstall GenericSetup profile
  [macagua]

- completed i18n support and added it translation 
  [giacomos]

- replace checkboxes with mark symbols in permission matrix
  [gaudenz]

- permission matrix display improvements
  [gaudenz]

1.0a2 (13/11/2011)
------------------

- Add interactive code debugging
  [optilude]

- Add TALES tester
  [optilude]

- Add details of context methods and attributes
  [optilude]

1.0a1 (13/11/2011)
------------------

- Initial release
  [optilude]